--- a/environment.yml
+++ b/environment.yml
@@ -23,6 +23,7 @@ dependencies:
   - dav1d=1.2.1=h5eee18b_0
   - dbus=1.13.18=hb2f20db_0
   - debugpy=1.8.11=py312h6a678d5_0
+  - et_xmlfile=1.1.0=py312h06a4308_1
   - exceptiongroup=1.3.0=pyhd8ed1ab_0
   - executing=2.2.0=pyhd8ed1ab_0
   - expat=2.7.1=h6a678d5_0
@@ -115,6 +116,7 @@ dependencies:
   - numpy-base=2.3.1=py312h150128d_0
   - openjpeg=2.5.2=h0d4d230_1
   - openldap=2.6.4=h42fbc30_0
+  - openpyxl=3.1.5=py312h5eee18b_1
   - openssl=3.5.2=h26f9b46_0
   - packaging=25.0=pyh29332c3_1
   - pandas=2.3.1=py312h277b779_0
