--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ dav1d=1.2.1=h5eee18b_0
 dbus=1.13.18=hb2f20db_0
 debugpy=1.8.11=py312h6a678d5_0
 decorator=4.4.2=pypi_0
+et_xmlfile=1.1.0=py312h06a4308_1
 exceptiongroup=1.3.0=pyhd8ed1ab_0
 executing=2.2.0=pyhd8ed1ab_0
 expat=2.7.1=h6a678d5_0
@@ -142,6 +143,7 @@ nvidia-nvjitlink-cu12=12.9.86=pypi_0
 nvidia-nvtx-cu12=12.1.105=pypi_0
 openjpeg=2.5.2=h0d4d230_1
 openldap=2.6.4=h42fbc30_0
+openpyxl=3.1.5=py312h5eee18b_1
 openssl=3.5.2=h26f9b46_0
 packaging=25.0=pyh29332c3_1
 pandas=2.3.1=py312h277b779_0
